--- a/styles/views/partial/share-creation.styl
+++ b/styles/views/partial/share-creation.styl
@@ -18,7 +18,7 @@
             font-size 18px
 
     .cover
-        min-height 400px
+        max-height 400px
         background-size cover
         background-position center center
 
